# tools-frontend

./: .gitignore  components.json  next.config.js  package-lock.json  package.json  tsconfig.json
.github/workflows/: deploy.yml
app/: globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
app/base64/: page.tsx
app/bcrypt-generator/: page.tsx
app/case-converter/: page.tsx
app/code-minifier/: page.tsx
app/color-picker/: page.tsx
app/color-tokens/: page.tsx
app/csv-json/: page.tsx
app/domain-ip/: page.tsx
app/duplicate-remover/: page.tsx
app/exif-remover/: page.tsx
app/favicon-generator/: page.tsx
app/gradient-generator/: page.tsx
app/hash-generator/: page.tsx
app/html-entities/: page.tsx
app/html-validator/: page.tsx
app/image-compressor/: page.tsx
app/image-resizer/: page.tsx
app/json-formatter/: page.tsx
app/json-to-csv/: page.tsx
app/jwt-decoder/: page.tsx
app/line-counter/: page.tsx
app/lorem-ipsum/: page.tsx
app/markdown-html/: page.tsx
app/meta-tag-generator/: page.tsx
app/password-generator/: page.tsx
app/password-strength/: page.tsx
app/qr-generator/: page.tsx
app/regex-tester/: page.tsx
app/robots-generator/: page.tsx
app/search/: page.tsx
components/: tool-coming-soon.tsx
lib/: dummy-tools.ts  tools.ts
public/: manifest.json
wasm/: Cargo.toml  build.sh
wasm/image-compressor/: Cargo.toml
wasm/image-compressor/pkg/: image_compressor_wasm.d.ts  image_compressor_wasm.js  image_compressor_wasm_bg.wasm  image_compressor_wasm_bg.wasm.d.ts  package.json
wasm/image-compressor/src/: lib.rs
(+116 files in other folders)
