[package]
name = "image-compressor-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
image = { version = "0.24", default-features = false, features = ["jpeg", "png"] }
console_error_panic_hook = "0.1"

[profile.release]
opt-level = "s"
lto = true
